--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
         applicationId "com.zhelezny.frog"
         minSdk 21
         targetSdk 21
-        versionCode 1
+        versionCode 2
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -29,6 +29,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -44,4 +47,8 @@ dependencies {
 //    implementation("io.ktor:ktor-client-core:1.6.7")
     implementation("io.ktor:ktor-client-android:1.6.7")
     implementation("io.ktor:ktor-client-cio:1.6.7")
+
+    implementation("androidx.navigation:navigation-fragment-ktx:2.4.1")
+    implementation("androidx.navigation:navigation-ui-ktx:2.4.1")
+    implementation("androidx.fragment:fragment-ktx:1.4.1")
 }
