--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
         minSdk 21
         targetSdk 33
         versionCode 8
-        versionName "0.0.2-$versionCode"
+        versionName "0.0.3-$versionCode"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -32,6 +32,7 @@ android {
     buildFeatures {
         viewBinding true
     }
+    namespace 'com.zhelezny.frog'
 }
 
 dependencies {
@@ -61,5 +62,5 @@ dependencies {
     implementation("androidx.fragment:fragment-ktx:1.5.4")
 
     implementation 'com.google.code.gson:gson:2.10'
-    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.1")
+    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.9.22")
 }
