--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,16 +1,17 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id("org.jetbrains.kotlin.plugin.serialization")
 }
 
 android {
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.zhelezny.frog"
         minSdk 21
-        targetSdk 33
-        versionCode 8
+        targetSdk 34
+        versionCode 9
         versionName "0.0.3-$versionCode"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -45,7 +46,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    def ktor_version = '2.0.0'
+    def ktor_version = '2.3.7'
     implementation("io.ktor:ktor-client-core:$ktor_version")
     implementation("io.ktor:ktor-client-cio:$ktor_version")
     implementation("io.ktor:ktor-client-websockets:$ktor_version")
@@ -59,8 +60,8 @@ dependencies {
 
     implementation("androidx.navigation:navigation-fragment-ktx:2.5.3")
     implementation("androidx.navigation:navigation-ui-ktx:2.5.3")
-    implementation("androidx.fragment:fragment-ktx:1.5.4")
+    implementation("androidx.fragment:fragment-ktx:1.6.2")
 
-    implementation 'com.google.code.gson:gson:2.10'
-    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.9.22")
+//    implementation 'com.google.code.gson:gson:2.10'
+    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.0")
 }
